new akka structure added and code modified

--- a/yt-lytics-syntax-squad/conf/application.conf
+++ b/yt-lytics-syntax-squad/conf/application.conf
@@ -3,5 +3,6 @@
 play.filters.csrf.header.bypassHeaders {
   X-Requested-With = "*"
 }
+play.modules.enabled += "modules.WebSocketModule"
 play.filters.disabled += "play.filters.headers.SecurityHeadersFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
